Fix datepicker buttonset visibility on small screens

--- a/src/components/datepicker/_datepicker.scss
+++ b/src/components/datepicker/_datepicker.scss
@@ -94,6 +94,20 @@
 .monthview-popup.popover {
   max-width: inherit;
 
+  @media screen and (max-height: $breakpoint-big-phone + 20) {
+    overflow-y: auto;
+  }
+
+  // Supports landscape orientation for small iPhone (5, 5S, 5C and 5SE)
+  @media only screen
+    and (min-device-width: $breakpoint-phone)
+    and (max-device-width: $breakpoint-big-phone + 88)
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (orientation: landscape) {
+    height: 250px;
+    overflow-y: auto;
+  }
+
   .monthview {
     min-width: 330px;
   }
@@ -224,5 +238,13 @@ html[dir='rtl'] {
 @include respond-to(tabletdown) {
   .monthview-popup.popover .monthview {
     min-width: 310px;
+
+    @media only screen
+      and (min-device-width: $breakpoint-phone)
+      and (max-device-width: $breakpoint-big-phone + 88)
+      and (-webkit-min-device-pixel-ratio: 2)
+      and (orientation: portrait) {
+      min-width: 280px;
+    }
   }
 }
